scripts/iptables-export
# Generated by iptables-save v1.4.7 on Wed Feb 22 18:23:42 2017
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [86:10960]
-A INPUT -i lo -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8181 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8080 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 3306 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 4848 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 1812 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8081 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8446 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8082 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8447 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8083 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8450 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8444 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8443 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8084 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8449 -j ACCEPT 
-A INPUT -j DROP 
-A OUTPUT -o lo -j ACCEPT 
COMMIT
# Completed on Wed Feb 22 18:23:42 2017
